fix spacing between navigation and content

--- a/web/static/css/app.scss
+++ b/web/static/css/app.scss
@@ -6,3 +6,7 @@
 form.link {
   display: inline-block;
 }
+
+main {
+  margin-top: 72px;
+}
